AppCDS DynamicArchiveRelocationTest.java failed: 'always map archive(s) at an alternative address' missing

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 14
    • Affects Version/s: 14
    • Component/s: hotspot
    • b27
    • x86_64
    • windows

      The following test failed in the JDK14 CI:

      runtime/cds/appcds/dynamicArchive/DynamicArchiveRelocationTest.java

      Here's a snippet from the log file:

      ----------System.err:(59/4678)----------
       stdout: [[0.058s][debug][cds] Reserved archive_space_rs [0x0000000805490000 - 0x0000000806030000] (12189696) bytes
      [0.058s][debug][cds] Reserved class_space_rs [0x0000000806030000 - 0x0000000846030000] (1073741824) bytes
      [0.058s][info ][cds] Commit static region #0 at base 0x0000000805490000 top 0x00000008054a0000 (MiscData) exec
      [0.058s][info ][cds] Mapped static region #0 at base 0x0000000805490000 top 0x00000008054a0000 (MiscData)
      [0.058s][info ][cds] Commit static region #1 at base 0x00000008054a0000 top 0x00000008058d0000 (ReadWrite)
      [0.072s][info ][cds] Mapped static region #1 at base 0x00000008054a0000 top 0x00000008058d0000 (ReadWrite)
      [0.072s][info ][cds] Commit static region #2 at base 0x00000008058d0000 top 0x0000000805ff0000 (ReadOnly)
      [0.079s][info ][cds] Mapped static region #2 at base 0x00000008058d0000 top 0x0000000805ff0000 (ReadOnly)
      [0.079s][info ][cds] Commit static region #3 at base 0x0000000805ff0000 top 0x0000000806000000 (MiscCode)
      [0.079s][info ][cds] Mapped static region #3 at base 0x0000000805ff0000 top 0x0000000806000000 (MiscCode)
      [0.079s][debug][cds,reloc] runtime archive relocation start
      [0.079s][debug][cds,reloc] mapped relocation bitmap @ 0x0000000846030000 (196608 bytes = 1486103 bits)
      [0.079s][debug][cds,reloc] SharedDataRelocator::_patch_base = 0x0000000805490000
      [0.079s][debug][cds,reloc] SharedDataRelocator::_patch_end = 0x0000000806000000
      [0.079s][debug][cds,reloc] SharedDataRelocator::_valid_old_base = 0x0000000800000000
      [0.079s][debug][cds,reloc] SharedDataRelocator::_valid_old_end = 0x0000000800b70000
      [0.079s][debug][cds,reloc] SharedDataRelocator::_valid_new_base = 0x0000000805490000
      [0.079s][debug][cds,reloc] SharedDataRelocator::_valid_new_end = 0x0000000806000000
      [0.087s][debug][cds,reloc] runtime archive relocation done
      [0.087s][info ][cds ] Commit dynamic region #1 at base 0x0000000806000000 top 0x0000000806010000 (ReadWrite)
      [0.087s][info ][cds ] Mapped dynamic region #1 at base 0x0000000806000000 top 0x0000000806010000 (ReadWrite)
      [0.087s][info ][cds ] Commit dynamic region #2 at base 0x0000000806010000 top 0x0000000806020000 (ReadOnly)
      [0.087s][info ][cds ] Mapped dynamic region #2 at base 0x0000000806010000 top 0x0000000806020000 (ReadOnly)
      [0.087s][info ][cds ] Commit dynamic region #0 at base 0x0000000806020000 top 0x0000000806030000 (MiscData) exec
      [0.087s][info ][cds ] Mapped dynamic region #0 at base 0x0000000806020000 top 0x0000000806030000 (MiscData)
      [0.087s][debug][cds,reloc] runtime archive relocation start
      [0.088s][debug][cds,reloc] mapped relocation bitmap @ 0x0000000846030000 (65536 bytes = 8397 bits)
      [0.088s][debug][cds,reloc] SharedDataRelocator::_patch_base = 0x0000000806000000
      [0.088s][debug][cds,reloc] SharedDataRelocator::_patch_end = 0x0000000806030000
      [0.088s][debug][cds,reloc] SharedDataRelocator::_valid_old_base = 0x0000000800000000
      [0.088s][debug][cds,reloc] SharedDataRelocator::_valid_old_end = 0x0000000800ba0000
      [0.088s][debug][cds,reloc] SharedDataRelocator::_valid_new_base = 0x0000000805490000
      [0.088s][debug][cds,reloc] SharedDataRelocator::_valid_new_end = 0x0000000806030000
      [0.088s][debug][cds,reloc] runtime archive relocation done
      Hello World
      ];
       stderr: []
       exitValue = 0

      java.lang.RuntimeException: 'ArchiveRelocationMode == 1: always map archive(s) at an alternative address' missing from stdout/stderr

      at jdk.test.lib.process.OutputAnalyzer.shouldContain(OutputAnalyzer.java:187)
      at DynamicArchiveRelocationTest.lambda$doTest$1(DynamicArchiveRelocationTest.java:122)
      at jdk.test.lib.cds.CDSTestUtils$Result.assertNormalExit(CDSTestUtils.java:147)
      at DynamicArchiveRelocationTest.doTest(DynamicArchiveRelocationTest.java:120)
      at DynamicArchiveTestBase.runTest(DynamicArchiveTestBase.java:70)
      at DynamicArchiveRelocationTest.testInner(DynamicArchiveRelocationTest.java:68)
      at DynamicArchiveRelocationTest.testOuter(DynamicArchiveRelocationTest.java:54)
      at DynamicArchiveRelocationTest.main(DynamicArchiveRelocationTest.java:44)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
      at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
      at java.base/java.lang.reflect.Method.invoke(Method.java:564)
      at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:298)
      at java.base/java.lang.Thread.run(Thread.java:832)

      JavaTest Message: Test threw exception: java.lang.RuntimeException
      JavaTest Message: shutting down test

      result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: 'ArchiveRelocationMode == 1: always map archive(s) at an alternative address' missing from stdout/stderr

      Starting this bug at P3 since it is a Tier2 test failure.

            Assignee:
            Ioi Lam
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: